--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.564.0",
     "mongoose": "^9.2.1",
-    "next": "^15.1.11",
+    "next": "15.1.7",
     "nodemailer": "^8.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -41,7 +41,7 @@
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.24",
     "eslint": "^9",
-    "eslint-config-next": "^15.1.11",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
